# flatus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  SECURITY.md  rust-toolchain.toml  rustfmt.toml  vercel.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: ci.yml  pages.yml  release.yml
apps/desktop/: package.json  pnpm-lock.yaml
apps/desktop/resources/: dmg-background.tiff
apps/desktop/src/: index.html  main.js  main.ts  style.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: .gitkeep  icon.icns
apps/desktop/src-tauri/src/: idle.rs  main.rs
apps/web/: index.html  install.sh  main.js  style.css
apps/web/samples/v0.3/: manifest.json
apps/web/samples/v0.4/: manifest.json
apps/web/wasm/: fart_synth.js  fart_synth_bg.wasm
crates/fart-synth/: Cargo.toml
crates/fart-synth/examples/: inspect_distribution.rs
crates/fart-synth/src/: grain.rs  graph.rs  lib.rs  params.rs  personalities.rs  pressure.rs  prng.rs  safety.rs  wasm.rs  wav.rs
crates/fart-synth/tests/: golden.rs  plausibility.rs
docs/: ACOUSTICS.md  AUDIO_BASELINE.md  DEMO.md  ENGINEERING.md  NEXT_ROADMAP.md  PLAN.md  PLUGIN_RESEARCH.md  PRODUCT_BACKLOG.md  REALISM.md
docs/archive/: DEMO.md  README.md
docs/archive/releases/: RELEASE_NOTES_v0.1.0-pre.1.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.2.md
docs/test/: 2026-05-14-desktop-audio-notes.md  README.md
fixtures/golden/: manifest.json
scripts/: deploy-vercel.sh  dev.sh  doctor.sh  rasterize-svg.sh  release.sh  render_all_visuals.sh  render_tray_icon.py  render_visuals.py  verify_audio_baseline.sh
skills/fart/: SKILL.md
skills/fart/scripts/: fart.sh
