[workspace]
resolver = "2"
members = [
    "crates/fart-synth",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/p-to-q/flatus"
authors = ["p-to-q"]
rust-version = "1.78"

[workspace.dependencies]
fart-synth = { path = "crates/fart-synth" }
