[package]
name = "fart-synth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Synthesis core for flatus — a small apparatus for moving air."

[lib]
name = "fart_synth"
path = "src/lib.rs"

[[bin]]
name = "fart"
path = "src/bin/fart.rs"

[[bin]]
name = "generate-goldens"
path = "src/bin/generate_goldens.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
cpal = "0.15"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
